syntax= "proto3";

package todoPackage;

message TodoItem {
    int32 id =1;
    string text =2;
}

message TodoItems {
    repeated TodoItem items = 1; 
}

message voidParams {}

service Todo {
    rpc createTodo( TodoItem) returns( TodoItem);
    rpc readTodos(voidParams) returns(TodoItems);
    rpc readTodoStreams(voidParams) returns(TodoItems);
}

